--- a/Views/Login.html
+++ b/Views/Login.html
@@ -1,1 +1,53 @@
-{\rtf1}
+<!DOCTYPE html>
+<html lang="pt">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" href="assets/images/logo.png">
+    <title>Login</title>
+</head>
+
+<body>
+
+
+<main class="container-fluid d-flex align-items-center justify-content-center">
+
+
+    <form class="form-login">
+        <h3>Sign Up</h3>
+        <p>Login to Manage your account</p>
+        <div class="input-group mb-4">
+            <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+   
+        </div>
+        <div class="input-group mb-4">
+            <span class="input-group-text" ><i class="fas fa-lock"></i></span>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+  
+        </div>
+      
+        <div class="mb-4 form-check flex">
+            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <label class="form-check-label" for="exampleCheck1">Remember me</label>
+          </div>
+          
+        <button type="submit" class="btn btn-primary " >Entrar</button>
+       
+      </form>
+
+
+
+</main>
+
+
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
