--- a/Views/Reset.html
+++ b/Views/Reset.html
@@ -11,7 +11,7 @@
         integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="assets/images/logo.png">
-    <title>Login</title>
+    <title>Reset password</title>
 </head>
 
 <body>
@@ -20,34 +20,24 @@
     <main class="container-fluid d-flex align-items-center justify-content-center">
 
 
-        <form class="form-login">
-            <h3>Sign Up</h3>
-            <p>Login to Manage your account</p>
-            <div class="d-grid gap-2 mb-4">
-                <button class="btn btn-danger" type="button">Sign In with Google</button>
+        <form class="form-login text-center">
+            <h3>Reset password</h3>
+            
+            <div class="input-group mb-4">
                
-              </div>
-            <div class="input-group mb-4">
-                <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-
-            </div>
-            <div class="input-group mb-4">
                 <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                <input type="password" class="form-control pass" id="exampleInputPassword1">
-                <span class="input-group-text show">Show</span>
+                <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="New password">
 
             </div>
+            <div class="input-group mb-4">
+               
+                <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Confirm new password">
 
-            <div class="mb-4 form-check flex">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Remember me</label>
             </div>
-            <div class="mb-4 forgot-password text-end">
-           <a href="#" title="Forgot password" class="text-decoration-none">Forgot Password?</a>
-            </div>
+            
 
-            <button type="submit" class="btn btn-primary ">Sign in</button>
+            <button type="submit" class="btn btn-primary ">Save</button>
 
         </form>
 
