--- a/Views/Forgot.html
+++ b/Views/Forgot.html
@@ -21,16 +21,17 @@
 
 
         <form class="form-login text-center">
-            <h3>Forgot Password?</h3>
+            <h3 class="my-4">Forgot Password?</h3>
             <p>Please enter your email adress and we will send you a link to reset your password.</p>
-            
+
             <div class="input-group mb-4">
-               
+
                 <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email adress">
+                <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp"
+                    placeholder="Email adress">
 
             </div>
-            
+
 
             <button type="submit" class="btn btn-primary ">Reset Password</button>
 
@@ -43,7 +44,7 @@
 
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-   
+
 </body>
 
 </html>
