--- a/Views/Register.html
+++ b/Views/Register.html
@@ -2,59 +2,62 @@
 <html lang="pt">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/css/style2.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href="assets/images/logo.png">
-    <title>Login</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/style2.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="icon" href="assets/images/logo.png">
+  <title>Login</title>
 </head>
 
 <body>
 
 
-    <main class="container-fluid d-flex align-items-center justify-content-center">
+  <main class="container-fluid d-flex align-items-center justify-content-center">
 
 
-        <form class="form-login text-center">
-            <h3>Create Account</h3>
-            
-            <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput"> Name</label>
-              </div>
-              <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
-              </div>
-              <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Password</label>
-              </div>
-              <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Confirm password</label>
-              </div>
-             
+    <form class="form-login text-center">
+      <h3 class="my-4">Create Account</h3>
 
-          
+      <div class="form-floating mb-3">
+        <input type="text" class="form-control" name="name" id="floatingInput" placeholder="Your name">
+        <label for="floatingInput"> Name</label>
+      </div>
 
-            <button type="submit" class="btn btn-primary ">Sign Up</button>
+      <div class="form-floating mb-3">
+        <input type="email" class="form-control" name="email" id="floatingInput" placeholder="name@example.com">
+        <label for="floatingInput">Email address</label>
+      </div>
 
-        </form>
+      <div class="form-floating mb-3">
+        <input type="password" class="form-control" name="password" id="floatingInput" placeholder="password">
+        <label for="floatingInput">Password</label>
+      </div>
+
+      <div class="form-floating mb-3">
+        <input type="password" class="form-control" name="confPassword" id="floatingInput" placeholder="Confirm password">
+        <label for="floatingInput">Confirm password</label>
+      </div>
 
 
 
-    </main>
+
+      <button type="submit" class="btn btn-primary ">Sign Up</button>
+
+    </form>
 
 
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-   
+
+  </main>
+
+
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
