--- a/Views/Reset.html
+++ b/Views/Reset.html
@@ -21,21 +21,23 @@
 
 
         <form class="form-login text-center">
-            <h3>Reset password</h3>
-            
+            <h3 class="my-4">Reset password</h3>
+
             <div class="input-group mb-4">
-               
+
                 <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="New password">
+                <input type="password" class="form-control" id="InputPassword" aria-describedby="emailHelp"
+                    placeholder="New password">
 
             </div>
             <div class="input-group mb-4">
-               
+
                 <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                <input type="password" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Confirm new password">
+                <input type="password" class="form-control" id="inputConfPassword" aria-describedby="emailHelp"
+                    placeholder="Confirm new password">
 
             </div>
-            
+
 
             <button type="submit" class="btn btn-primary ">Save</button>
 
@@ -48,7 +50,7 @@
 
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-   
+
 </body>
 
 </html>
