--- a/Views/assets/css/style.css
+++ b/Views/assets/css/style.css
@@ -51,7 +51,7 @@ main {
   font-size: 1em;
   color: rgb(241 235 235 / 43%);
 }
-input {
+.form-control {
   background-color: transparent !important;
   outline: 0 !important;
   border-color: rgba(255, 255, 255, 0.6) !important;
@@ -96,3 +96,32 @@ button {
     border-left: none !important;
 
   }
+  .asides a{
+    color: rgb(241 235 235 / 43%) !important;
+    font-size: 14px;
+
+  }
+  hr{
+    
+    width: 100px;
+  }
+ .is-invalid{
+   border-color: #dc3545!important;
+ }
+
+ .error h1{
+
+
+font-size: 50pt;
+text-transform: uppercase;
+margin: 15px 0;
+font-weight: bold;
+
+ }
+
+ .error h3{
+   text-transform: uppercase;
+   font-weight:500;
+   margin: 20px 0;
+ }
+ 
