--- a/Views/Login.html
+++ b/Views/Login.html
@@ -28,13 +28,14 @@
                 <p>Or</p>
             </div>
             <div class="input-group mb-4">
-                <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                <input type="email" class="form-control" name="email" id="InputEmail"/>
+                <i class="fas fa-envelope"></i>
+                <input type="email" class="form-control " name="email" id="InputEmail"/>
             </div>
-            <div class="input-group mb-4">
-                <span class="input-group-text"><i class="fas fa-lock"></i></span>
+            <div class="input-group mb-4 position-relative">
+                <i class="fas fa-lock"></i>
                 <input type="password" class="form-control pass" name="password" id="InputPassword" />
-                <span class="input-group-text show">Show</span>
+                <p class="show">Show</p>
+             
             </div>
 
             <div class="mb-4 form-check flex">
