--- a/Views/Forgot.html
+++ b/Views/Forgot.html
@@ -26,8 +26,8 @@
 
             <div class="input-group mb-4">
 
-                <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp"
+               <i class="fas fa-envelope"></i>
+                <input type="email" class="form-control " id="exampleInputEmail1" name="email" aria-describedby="emailHelp"
                     placeholder="Email adress">
 
             </div>
