--- a/Views/Reset.html
+++ b/Views/Reset.html
@@ -25,14 +25,14 @@
 
             <div class="input-group mb-4">
 
-                <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                <i class="fas fa-lock"></i>
                 <input type="password" class="form-control" id="InputPassword" aria-describedby="emailHelp"
                     placeholder="New password">
 
             </div>
             <div class="input-group mb-4">
 
-                <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                <i class="fas fa-lock"></i>
                 <input type="password" class="form-control" id="inputConfPassword" aria-describedby="emailHelp"
                     placeholder="Confirm new password">
 
